# Desafio-Desenvolvedor-Python-Django

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: github_ci.yml
banners/: imagem_1.jfif  imagem_2.jfif  imagem_3.jfif  imagem_4.jfif  imagem_5.jfif
config/: env-sample
docker_desafio/: docker_compose.yml
gamification_portal/: asgi.py  settings.py  urls.py  wsgi.py
gamification_portal/core/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
gamification_portal/core/migrations/: 0001_initial.py  0002_alter_desafio_banner.py
gamification_portal/core/static/core/css/: core.css
gamification_portal/core/templates/core/: atribuir_desafio.html  base.html  cadastrar_desafio.html  detalhes_desafio.html  detalhes_desafios.html  editar_usuario.html  gerenciar_usuarios.html  home.html  listar_desafios.html  visualizar_desafios_atribuidos.html
gamification_portal/core/templates/registration/: logged_out.html  login.html
gamification_portal/core/tests/: test_base.py  test_views.py
